small layout fixes: remove horizontal scroll and font-size for why

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,7 +376,6 @@ td.buckler {
   margin: 0;
 }
 .main-page .what .row {
-  gap: 22px;
   height: 600px;
   flex-wrap: nowrap;
 }
@@ -406,6 +405,7 @@ td.buckler {
   background-size: 100% 50%;
   background-repeat: no-repeat;
   background-position: bottom;
+  margin-right: 11px;
 }
 @media screen and (max-width: 990px) {
   .main-page .what .row .left {
@@ -474,6 +474,11 @@ td.buckler {
 @media screen and (max-width: 900px) {
   .main-page .why h2 {
     margin: 25px 10px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .main-page .why h2 {
+    font-size: 24px;
   }
 }
 .main-page .why .cards-wrapper {
